# LoggerAPI

./: CMakeLists.txt  main.cpp
src/IO/: CustomFormatFileInterface.cpp  CustomFormatFileInterface.hpp  FileInterface.cpp  FileInterface.hpp  JsonFileInterface.cpp  JsonFileInterface.hpp
src/logger_classes/: Enums.hpp  LogEntry.cpp  LogEntry.hpp  MainLogger.cpp  MainLogger.hpp
src/networking/client/: ServerConnection.cpp  ServerConnection.hpp
src/networking/server/: Server.cpp  Server.hpp
src/networking/transport/: ClientResponse.hpp  Constants.hpp  Enums.hpp  ServerRequest.hpp
src/terminal/: InstructionInterpreter.cpp  InstructionInterpreter.hpp  TerminalUserInterface.cpp  TerminalUserInterface.hpp
